--- a/blank-template.html
+++ b/blank-template.html
@@ -107,7 +107,7 @@
           <td></td>
         </tr>
         <tr>
-          <th rowspan="2" scope="rowgroup">Ice giants</th>
+          <th rowspan="2" scope="rowgroup">Planetas Helados</th>
           <th scope="row">Urano</th>
           <td>86.8</td>
           <td>51,118</td>
